--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -38,5 +38,5 @@
   height: 100vh;
   height: 100dvh;
   box-sizing: border-box;
-  z-index: 50;
+  z-index: 1;
 }
